--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,3 +8,13 @@
 	width: 12.5%;
 	height: 12.5%;
 }
+.login{
+	position:absolute;
+	width:100%;
+	height:100vh;
+	background:rgba(0,0,0,0.4);
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	z-index:999;
+}
