--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	object-fit: cover;
 }
 .login{
 	position:absolute;
@@ -23,11 +24,6 @@
 	align-items:center;
 	z-index:999;
 }
-img{
-	width: 100%;
-	margin-bottom: 12.5%;
-
-}
 .figure{
-	width: 100px;
+	width: 100%;
 }
