--- a/public/css/form.css
+++ b/public/css/form.css
@@ -5,7 +5,7 @@
    float: left;
    padding: 60px 50px 40px 50px;
    width: 100%;
-   background: #fff;
+   background: #312e2e;
    border-radius: 10px;
    transform: scale(1);
    -webkit-transform: scale(1);
@@ -29,7 +29,8 @@
    border-radius: 10px;
    position: absolute;
    top: -10px;
-   background: rgba(255, 255, 255, .6);
+   background: #312e2e;
+   opacity: 0;
    left: 0;
    transform: scale(.95);
    -webkit-transform: scale(.95);
@@ -125,7 +126,7 @@
 .button button {
    font-family: 'Roboto', sans-serif;
    font-size: 24px;
-   color: rgba(0, 0, 0, 0.8);
+   color: rgba(255, 255, 255, 1);
    font-weight: 300;
 }
 
@@ -140,7 +141,7 @@
 
 .input:before {
    content: "";
-   background: rgba(0, 0, 0, 0.1);
+   background: rgba(255, 255, 255, 0.3);
    z-index: 3;
 }
 
@@ -178,10 +179,10 @@
    line-height: 64px;
    left: 0%;
    background-color: transparent;
-   border: 3px solid rgba(0, 0, 0, 0.1);
+   border: 3px solid rgba(255, 255, 255, 0.8);
    font-weight: 900;
    font-size: 18px;
-   color: rgba(0, 0, 0, 0.2);
+   color: rgba(255, 255, 255, 0.8);
 }
 
 .button.login {
@@ -250,7 +251,7 @@
    width: 100%;
    float: left;
    text-align: center;
-   color: rgba(0, 0, 0, 0.4);
+   color: rgba(255, 255, 255, 0.8);
    font-size: 18px;
 }
 
@@ -304,13 +305,13 @@
 
 .material-button,
 .alt-2 {
-   width: 140px;
-   height: 140px;
+   width: 100px;
+   height: 100px;
    border-radius: 50%;
    background: #ED2553;
    position: absolute;
-   top: 40px;
-   right: -70px;
+   top: 30px;
+   right: -40px;
    cursor: pointer;
    z-index: 100;
    transform: translate(0%, 0%);
@@ -363,7 +364,7 @@
 }
 
 body {
-   background-image: url(https://lh4.googleusercontent.com/-XplyTa1Za-I/VMSgIyAYkHI/AAAAAAAADxM/oL-rD6VP4ts/w1184-h666/Android-Lollipop-wallpapers-Google-Now-Wallpaper-2.png);
+   background-image: url(../images/form_bg.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
