--- a/public/css/form.css
+++ b/public/css/form.css
@@ -384,8 +384,19 @@ body {
    background-repeat: no-repeat;
    min-height: 100vh;
    font-family: 'Roboto', sans-serif;
+   animation: bs 30s linear infinite;
 }
-
+@keyframes bs{
+   0%{
+      background-size: 100%;
+   }
+   50%{
+      background-size: 120%;
+   }
+   100%{
+      background-size: 100%;
+   }
+}
 body,
 html {
    overflow: hidden;
