--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,7 +1,6 @@
 .box {
    position: relative;
    top: 0;
-   min-width: 350px;
    opacity: 1;
    float: left;
    padding: 60px 50px 40px 50px;
@@ -381,7 +380,7 @@
 body {
    background-image: url(../images/form_bg.jpg);
    background-position: center;
-   background-size: cover;
+   background-size: 100% 100%;
    background-repeat: no-repeat;
    min-height: 100vh;
    font-family: 'Roboto', sans-serif;
@@ -389,31 +388,35 @@ body {
 }
 @keyframes bs{
    0%{
-      background-size: 100% auto;
+      background-size: 100% 100%;
    }
    50%{
-      background-size: 120% auto;
+      background-size: 120% 120%;
    }
    100%{
-      background-size: 100% auto;
+      background-size: 100% 100%;
    }
 }
+@media screen and (max-width: 1050px) {
+     body { animation: none; background-size: cover;}
+   }
 body,
 html {
    overflow: hidden;
 }
 
 .materialContainer {
-   width: 100%;
-   max-width: 460px;
    position: absolute;
-   top: 50%;
+   top:50%;
    left: 50%;
+   width: 460px;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
 }
-
+#root{
+   width: 100%;
+}
 *,
 *:after,
 *::before {
